--- a/notifico/static/less/custom.less
+++ b/notifico/static/less/custom.less
@@ -103,6 +103,12 @@ ol.inline > li {
   }
 }
 
+// Alerts that appear globally at the top of the page.
+.alert-top-level {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 /*
  * Landing page components.
  */
